--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Sound Interaction and Computing Lab
+subtitle: SINC
 email: ad828@njit.edu
 description: >- # this means to ignore newlines until "baseurl:"
   The Sound Interaction and Computing (SInC) Lab is headed by Prof. Mark Cartwright in the Informatics Department of New Jersey Institute of Technology.
