--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ subtitle: SINC
 email: ad828@njit.edu
 description: >- # this means to ignore newlines until "baseurl:"
   The Sound Interaction and Computing (SInC) Lab is headed by Prof. Mark Cartwright in the Informatics Department of New Jersey Institute of Technology.
-baseurl: "/sinc-test" # the subpath of your site, e.g. /blog
-url: "https://ad828.github.io/sinc-test/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/NJIT-SInC" # the subpath of your site, e.g. /blog
+url: "https://ad828.github.io/NJIT-SInC/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
